fix link text
Some characters like y, g, j, etc. were being cut off.

--- a/css/theme/serif.css
+++ b/css/theme/serif.css
@@ -47,6 +47,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
+  line-height: 1.3em;
   color: #51483d;
   text-decoration: none;
   -webkit-transition: color .15s ease;
